fixed background not showing on home desktop

--- a/app/themes/so-il/src/sass/touch.scss
+++ b/app/themes/so-il/src/sass/touch.scss
@@ -21,7 +21,10 @@
   
   .home & {
     .background {
-      display:none !important;
+      .touch & {
+        display:none !important;
+      }
+      
     }
   }
 }
